force-app/main/default/objects/Invitation__c/fields/Event_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_and_Time__c</fullName>
    <label>Event Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>