force-app/main/default/objects/Invitation__c/fields/Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Facebook_URL__c</fullName>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>