force-app/main/default/objects/Invitation__c/fields/Invite_URL__c.field-meta.xml
<CustomField>
    <fullName>Invite_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://alanmcclenaghan-portfolio-dev-ed.my.site.com/invitation/?invitationid=&apos;+ Id , &apos;Invitation Url&apos;, &apos;_blank&apos;)</formula>
    <label>Invite URL</label>
    <type>Text</type>
</CustomField>