force-app/main/default/objects/Invitation__c/fields/RSVP_Accept_Message__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Accept_Message__c</fullName>
    <label>RSVP Accept Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>