force-app/main/default/objects/Invitation__c/fields/RSVP_After_Date_Message__c.field-meta.xml
<CustomField>
    <fullName>RSVP_After_Date_Message__c</fullName>
    <label>RSVP After Date Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>