force-app/main/default/objects/Invitation__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>theme1</fullName>
                <label>Theme 1</label>
            </value>
            <value>
                <fullName>theme2</fullName>
                <label>Theme 2</label>
            </value>
            <value>
                <fullName>theme3</fullName>
                <label>Theme 3</label>
            </value>
            <value>
                <fullName>theme4</fullName>
                <label>Theme 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>